--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -26,7 +26,7 @@
                                         <ui-select ng-model="wiModal.crossplotModelProps.pointsets[0].idCurveX"
                                         ng-change="wiModal.onselectedCurveXChange()">
                                             <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
-                                            <ui-select-choices group-by="'datasetName'"
+                                            <ui-select-choices group-by="wiModal.groupFn"
                                                 repeat='curve.id as curve in wiModal.curvesOnDataset | filter:{name:$select.search} track by curve.id'>
                                                     <div class="padding-left-20px">{{curve.properties.name}}</div>
                                             </ui-select-choices>
@@ -67,7 +67,7 @@
                                         <ui-select ng-model="wiModal.crossplotModelProps.pointsets[0].idCurveY"
                                         ng-change="wiModal.onselectedCurveYChange()">
                                             <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
-                                            <ui-select-choices group-by="'datasetName'"
+                                            <ui-select-choices group-by="wiModal.groupFn"
                                                 repeat='curve.id as curve in wiModal.curvesOnDataset | filter:{name:$select.search} track by curve.id'>
                                                     <div class="padding-left-20px">{{curve.properties.name}}</div>
                                             </ui-select-choices>
@@ -108,7 +108,7 @@
                                         <ui-select ng-model="wiModal.crossplotModelProps.pointsets[0].idCurveZ"
                                         ng-change="wiModal.onselectedCurveZChange()">
                                             <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
-                                            <ui-select-choices group-by="'datasetName'"
+                                            <ui-select-choices group-by="wiModal.groupFn"
                                                 repeat='curve.id as curve in wiModal.curvesOnDatasetWithBlank | filter:{name:$select.search} track by curve.id'>
                                                     <div class="padding-left-20px">{{curve.properties.name}}</div>
                                             </ui-select-choices>
