--- a/source/dialogs/curve-convolution/curve-convolution-modal.html
+++ b/source/dialogs/curve-convolution/curve-convolution-modal.html
@@ -21,7 +21,7 @@
                             ng-change="wiModal.onSelectCurveChange()"
                             class="normal-text">
                             <ui-select-match placeholder='Select a curve'>{{wiModal.inputCurve.properties.name}}</ui-select-match>
-                            <ui-select-choices group-by="'datasetName'"
+                            <ui-select-choices group-by="wiModal.groupFn"
                             repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
                                 <div class="padding-left-20px">{{curve.properties.name}}</div>
                             </ui-select-choices>
@@ -36,7 +36,7 @@
                             class="normal-text">
                             <ui-select-match placeholder='Select a curve'>
                                 {{wiModal.stdCurve.properties.name}}</ui-select-match>
-                            <ui-select-choices group-by="'datasetName'"
+                            <ui-select-choices group-by="wiModal.groupFn"
                             repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
                                 <div class="padding-left-20px">{{curve.properties.name}}</div>
                             </ui-select-choices>
