--- a/source/dialogs/curve-filter/curve-filter-modal.html
+++ b/source/dialogs/curve-filter/curve-filter-modal.html
@@ -48,7 +48,7 @@
                                     <div class="col-sm-10">
                                         <ui-select ng-model="wiModal.SelectedCurve" class="normal-text" ng-change="wiModal.onChangeCurve()">
                                             <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurve.properties.name}}</ui-select-match>
-                                            <ui-select-choices group-by="'datasetName'"
+                                            <ui-select-choices group-by="wiModal.groupFn"
                                             repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
                                                 <div class="padding-left-20px">{{curve.properties.name}}</div>
                                             </ui-select-choices>
