--- a/source/dialogs/curve-split/curve-split-modal.html
+++ b/source/dialogs/curve-split/curve-split-modal.html
@@ -55,7 +55,7 @@
                                 ng-change="wiModal.selectCurve(wiModal.idCurve)"
                                 class="normal-text">
                                 <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
-                                <ui-select-choices group-by="'datasetName'"
+                                <ui-select-choices group-by="wiModal.groupFn"
                                 repeat='curve.id as curve in wiModal.curves | filter:{name:$select.search} track by curve.id'>
                                     <div class="padding-left-20px">{{curve.properties.name}}</div>
                                 </ui-select-choices>
