--- a/source/dialogs/fill-data-gaps/fill-data-gaps-modal.html
+++ b/source/dialogs/fill-data-gaps/fill-data-gaps-modal.html
@@ -22,7 +22,7 @@
                                         <ui-select ng-model="wiModal.SelectedCurve" class="normal-text"
                                          ng-change="wiModal.getCurveData()">
                                             <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurve.properties.name}}</ui-select-match>
-                                            <ui-select-choices group-by="'datasetName'" repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
+                                            <ui-select-choices group-by="wiModal.groupFn" repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
                                                 <div class="padding-left-20px">{{curve.properties.name}}</div>
                                             </ui-select-choices>
                                         </ui-select>
@@ -119,13 +119,13 @@
                                                 </tr>
                                             </thead>
                                             <tbody style="overflow-y: scroll;display:block;height:10em; overflow-x:hidden">
-                                                <tr ng-repeat="curve in wiModal.curves | filter:{name: filterCurve, datasetName:filterDataset}| filter: wiModal.CurveF track by $index"
+                                                <tr ng-repeat="curve in wiModal.curves | filter:{name: filterCurve, properties:{dataset:filterDataset}}| filter: wiModal.CurveF track by $index"
                                                    ng-class="{'selected': curve.flag}" ng-click="wiModal.select(curve)">
                                                     <td style="width: 20%">
                                                         <i class='glyphicon glyphicon-ok' ng-class="{'color-black': curve.flag, 'color-lightgray': !curve.flag}"></i>
                                                     </td>
                                                     <td style="width: 40%">{{curve.name}}</td>
-                                                    <td style="width: 40%">{{curve.datasetName}}</td>
+                                                    <td style="width: 40%">{{curve.properties.dataset}}</td>
                                                     <td></td>
                                                 </tr>
                                             </tbody>
