--- a/source/dialogs/formation-resistivity/formation-resistivity-modal.html
+++ b/source/dialogs/formation-resistivity/formation-resistivity-modal.html
@@ -42,7 +42,7 @@
                                     <ui-select-match placeholder='Select a curve'>
                                         {{wiModal.curveModel.properties.name}}
                                     </ui-select-match>
-                                    <ui-select-choices group-by="'datasetName'"
+                                    <ui-select-choices group-by="wiModal.groupFn"
                                                         repeat='curve in wiModal.curves | filter:{properties: {name:$select.search}} track by curve.id'>
                                         <div class="padding-left-20px">{{curve.properties.name}}</div>
                                     </ui-select-choices>
