--- a/source/dialogs/histogram-for-object-track/histogram-for-object-track-modal.html
+++ b/source/dialogs/histogram-for-object-track/histogram-for-object-track-modal.html
@@ -53,7 +53,7 @@
                                                 ng-change="wiModal.onSelectCurveChange()"
                                                 class="normal-text">
                                                 <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurve.name}}</ui-select-match>
-                                                <ui-select-choices group-by="'datasetName'"
+                                                <ui-select-choices group-by="wiModal.groupFn"
                                                 repeat='curve in wiModal.curvesArr | filter:{ name : $select.search } track by curve.idCurve'>
                                                     <div class="padding-left-20px">{{curve.name}}</div>
                                                 </ui-select-choices>
