--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -71,7 +71,7 @@
                                                         ng-change="wiModal.onSelectCurveChange()"
                                                         class="normal-text">
                                                         <ui-select-match placeholder='Select a curve'>{{wiModal.SelectedCurve.properties.name}}</ui-select-match>
-                                                        <ui-select-choices group-by="'datasetName'"
+                                                        <ui-select-choices group-by="wiModal.groupFn"
                                                         repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
                                                             <div class="padding-left-20px">{{curve.properties.name}}</div>
                                                         </ui-select-choices>
