--- a/source/dialogs/reference-windows/reference-windows-modal.html
+++ b/source/dialogs/reference-windows/reference-windows-modal.html
@@ -84,7 +84,7 @@
                                             <ui-select ng-model="ref_curve.idCurve"
                                                 ng-change="wiModal.onSelectRefCurve($index)">
                                                 <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
-                                                <ui-select-choices group-by="'datasetName'"
+                                                <ui-select-choices group-by="wiModal.groupFn"
                                                 repeat='curve.id as curve in wiModal.curvesArr | filter: {name:$select.search} track by curve.id'>
                                                 <div class="padding-left-20px">{{curve.properties.name}}</div>
                                             </ui-select-choices>
