--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -184,7 +184,7 @@
                         <div ng-show="wiModal.tabFlags[1] == 'true'" class="container-fluid padding-top-2em padding-bottom-2em">
                             <form action="" class="form-horizontal">
                                 <div class="width-95-percent float-left">
-                                    <table class="text-on-table table table-bordered curveTable ui-select-small">
+                                    <table class="text-on-table curveTable ui-select-small striped-table">
                                         <thead>
                                             <tr>
                                                 <th>Curve</th>
@@ -194,7 +194,6 @@
                                                 <th>Log/Linear</th>
                                                 <th>Display Mode</th>
                                                 <th>Line/Symbol Style</th>
-                                                <!-- <td><strong>Symbol Style</strong></td> -->
                                                 <th>Display As</th>
                                                 <th></th>
                                             </tr>
@@ -204,16 +203,10 @@
                                                 ng-class="{selected:$index == selectedRowCurve}"
                                                 ng-click="wiModal.setClickedRowCurve($index)">
                                                 <td style="width: 12%">
-                                                    <!-- <select ng-model="wiModal.lineCurve[curve._index].id"
-                                                            name="curveName"
-                                                            class="form-control wi-form-control"
-                                                            ng-options="item.id as item.datasetCurve for item in wiModal.curvesArr"
-                                                            ng-change="wiModal.onSelectCurve();"
-                                                            ng-disabled="wiModal.setDisabledCurve(curve._index)"></select> -->
                                                     <ui-select ng-model="curve.lineCurve"
                                                                 ng-change="wiModal.onSelectCurve(); wiModal.onChangeCurve(curve._index);">
                                                         <ui-select-match placeholder='Select a curve'>{{curve.lineCurve.properties.name}}</ui-select-match>
-                                                        <ui-select-choices group-by="wiModal.groupFn"
+                                                        <ui-select-choices group-by="wiModal.groupFnTabCurve"
                                                                     repeat='c as c in wiModal.curvesArr | filter: {name:$select.search}'>
                                                                     <div class="padding-left-20px">{{c.properties.name}}</div>
                                                         </ui-select-choices>
@@ -251,24 +244,12 @@
                                                             ng-change="wiModal.onChangeCurve(curve._index);"></select>
                                                 </td>
                                                 <td>
-                                                    <!-- <input ng-model="curve.lineOptions"
-                                                            type="button" value="Edit..." id="editLine"
-                                                            class="form-control wi-form-control"
-                                                            ng-click="wiModal.lineStyleButtonClicked($index, $event); wiModal.onChangeCurve(curve._index);"
-                                                            ng-disabled="!wiModal.lineCurve[curve._index].id || (curve.displayMode == 'Symbol' || curve.displayMode == 'None')"> -->
                                                     <button type="button" 
                                                             ng-click="wiModal.onEditStyleButtonClicked($index, $event)"
                                                             ng-disabled="curve.displayMode =='None'"
                                                             class="btn btn-default wi-form-control" 
                                                             style="font-size: 10px; width: 100%">Edit</button>
                                                 </td>
-                                                <!-- <td>
-                                                    <input ng-model="curve.symbolOptions"
-                                                            type="button" value="Edit..." id="editSymbol"
-                                                            class="form-control wi-form-control"
-                                                            ng-click="wiModal.symbolStyleButtonClicked($index, $event); wiModal.onChangeCurve(curve._index);"
-                                                            ng-disabled="!wiModal.lineCurve[curve._index].id || (curve.displayMode == 'Line' || curve.displayMode == 'None')">
-                                                </td> -->
                                                 <td>
                                                     <select ng-model="curve.displayAs" name="displayAs"
                                                             value="" class="form-control wi-form-control"
@@ -287,9 +268,6 @@
                                     </table>
                                 </div>
                                 <div class="width-5-percent float-left padding-left-5px">
-                                    <!-- <button class="btn btn-default" ng-click="wiModal.removeRowCurve();">
-                                        <span class="delete-16x16"></span>
-                                    </button> -->
                                     <button class="btn btn-default" ng-click="wiModal.addRowCurve();">
                                         <span class="plus-16x16"></span>
                                     </button>
@@ -307,26 +285,26 @@
                     <wi-tab heading="Shading" active="wiModal.shadingOnly;" enabled="wiModal.tabFlags[2]">
                         <div ng-show="wiModal.tabFlags[2] == 'true'" class="container-fluid padding-top-2em padding-bottom-2em">
                             <form action="" class="form-horizontal">
-                                <div class="col-sm-11 padding-0">
-                                    <table style="border-collapse: collapse;" class="text-on-table table table-bordered shadingTable col-sm-12 ui-select-small">
+                                <div class="width-95-percent float-left">
+                                    <table class="text-on-table shadingTable ui-select-small striped-table">
                                         <thead>
                                             <tr>
-                                                <td class="text-center"><strong>Limit 1</strong></td>
-                                                <td colspan="2" class="text-center"><strong>Limit 2</strong></td>
-                                                <td colspan="3" class="text-center"><strong>Parameters</strong></td>
-                                                <td rowspan="2"></td>
+                                                <th>Limit 1</th>
+                                                <th>Limit 1</th>
+                                                <th colspan="2">Limit 2</th>
+                                                <th colspan="3">Parameters</th>
+                                            </tr>
+                                            <tr>
+                                                <th>Curve 1</th>
+                                                <th>Curve 2</th>
+                                                <th style="width: 15%">Fixed Value</th>
+                                                <th>Shading Name</th>
+                                                <th>Shading Style</th>
+                                                <th>Shading Options</th>
+                                                <th></th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <td class="text-center"><strong>Curve 1</strong></td>
-                                                <td class="text-center"><strong>Curve 2</strong></td>
-                                                <td class="text-center" style="width: 15%"><strong>Fixed Value</strong></td>
-                                                <td class="text-center"><strong>Shading Name</strong></td>
-                                                <td class="text-center"><strong>Shading Style</strong></td>
-                                                <td class="text-center"><strong>Shading Options</strong></td>
-                                                <td></td>
-                                            </tr>
                                             <tr ng-repeat="shading in wiModal.getShadings()"
                                                 ng-class="{'selected':$index == selectedRowShading}"
                                                 ng-click="wiModal.setClickedRowShading($index)">
@@ -335,7 +313,7 @@
                                                                 ng-change="wiModal.onChangeShading($index); wiModal.onSelectRightLine();
                                                                 wiModal.setShadingName(shading.rightLine, shading.leftLine, shading._index)">
                                                         <ui-select-match placeholder='Select a curve'>{{shading.rightLine.name}}</ui-select-match>
-                                                        <ui-select-choices group-by="wiModal.groupFn"
+                                                        <ui-select-choices group-by="wiModal.groupFnTabShading"
                                                                     repeat='c as c in wiModal.curveList | filter: $select.search'>
                                                                     <div class="padding-left-20px">{{c.name}}</div>
                                                         </ui-select-choices>
@@ -346,7 +324,7 @@
                                                                 ng-change="wiModal.onChangeShading($index); wiModal.onSelectLeftLine();
                                                                 wiModal.setShadingName(shading.rightLine, shading.leftLine, shading._index)">
                                                         <ui-select-match placeholder='Select a curve'>{{shading.leftLine.name}}</ui-select-match>
-                                                        <ui-select-choices group-by="wiModal.groupFn"
+                                                        <ui-select-choices group-by="wiModal.groupFnTabShading"
                                                                     repeat='c as c in wiModal.leftLimit | filter: $select.search'>
                                                                     <div class="padding-left-20px">{{c.name}}</div>
                                                         </ui-select-choices>
@@ -361,12 +339,6 @@
                                                             ng-focus="wiModal.setClickedRowShading($index)"
                                                             step="any">
                                                 </td>
-                                                <!-- <td class="border border-style1-right">
-                                                    <input type="number" ng-model="shading.rightFixedValue"
-                                                            class="form-control wi-form-control"
-                                                            ng-change="wiModal.onChangeShading($index);wiModal.setShadingName();"  step="any"
-                                                            disabled>
-                                                </td> -->
                                                 <td>
                                                     <input type="text" ng-model="shading.name"
                                                             class="form-control wi-form-control"
@@ -400,7 +372,7 @@
                                     </table>
                                     <p></p>
                                 </div>
-                                <div class="col-sm-1">
+                                <div class="width-5-percent float-left padding-left-5px">
                                     <button type="button" class="btn btn-default" ng-click="wiModal.addRowShading()"><span class="plus-16x16"></span></button>
                                 </div>
                             </form>
