--- a/source/html/online-inventory/index.html
+++ b/source/html/online-inventory/index.html
@@ -22,7 +22,7 @@
         margin-left: 5px;
     }
 </style>
-<div style="flex:1;display:flex;flex-direction:row;border: 1px solid black;">
+<div style="flex:1;display:flex;flex-direction:row;">
     <wii-explorer name='wiiExplorer' style="margin-left:1em;flex: 4"></wii-explorer>
     <wii-items name="wiiItems" style="flex: 3"></wii-items>
     <wii-properties name="wiiProperties" style="flex: 3"></wii-properties>
