--- a/source/dialogs/curve-family/curve-family-modal.html
+++ b/source/dialogs/curve-family/curve-family-modal.html
@@ -8,7 +8,7 @@
             <div class="modal-body">
                 <style>
                   .list-group {
-                    max-height: 70vh;
+                    max-height: calc(100% - 220px);
                     overflow: auto;
                   }
                   .list-group-item {
