--- a/source/html/well-import/index.html
+++ b/source/html/well-import/index.html
@@ -82,10 +82,10 @@
         <div style='flex:1;display:flex;flex-direction:column'>
             <div style='flex:1;position-relative;'>
                 <div class='wi-chunked-upload-container'>
-                    <wi-chunked-upload style="display:flex;flex-direction:column;height:100%;" upload-url="'http://192.168.0.91:33333/chunked-upload'" id-input="my-file" on-done='handlers.lasZipArchiveUploadDone' on-error='handlers.lasZipArchiveUploadError'>
-                    </wi-chunked-upload>
-                    <!--<wi-chunked-upload style="display:flex;flex-direction:column;height:100%;" upload-url="'http://batch.sflow.me/chunked-upload'" id-input="my-file" on-done='handlers.lasZipArchiveUploadDone' on-error='handlers.lasZipArchiveUploadError'>
+                    <!--<wi-chunked-upload style="display:flex;flex-direction:column;height:100%;" upload-url="'http://192.168.0.91:33333/chunked-upload'" id-input="my-file" on-done='handlers.lasZipArchiveUploadDone' on-error='handlers.lasZipArchiveUploadError'>
                     </wi-chunked-upload>-->
+                    <wi-chunked-upload style="display:flex;flex-direction:column;height:100%;" upload-url="'http://batch.sflow.me/chunked-upload'" id-input="my-file" on-done='handlers.lasZipArchiveUploadDone' on-error='handlers.lasZipArchiveUploadError'>
+                    </wi-chunked-upload>
                 </div>
             </div>
         </div>
