--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -282,7 +282,8 @@
     </template>
     
     <script src="js/simpleLayout.js.bundle.js"></script>
-    <script src="http://192.168.0.91:33333/socket.io/socket.io.js"></script>
+    <!--<script src="http://192.168.0.91:33333/socket.io/socket.io.js"></script>-->
+    <script src="http://batch.sflow.me/socket.io/socket.io.js"></script>
     <!-- Insert this line after script imports -->
     <script>
         if (window.module) module = window.module;
