--- a/source/dialogs/open-plot-template/open-plot-template.html
+++ b/source/dialogs/open-plot-template/open-plot-template.html
@@ -23,6 +23,7 @@
                                            ng-model="wiModal.tplFile"
                                            ngf-max-size="100MB" required
                                            ng-change="wiModal.plotName = wiModal.tplFile.name.replace('.plot', '') || 'Logplot Template'"
+                                           accept=".plot"
                                     />
                                 </div>
                             </div>
