--- a/source/dialogs/add-curve/add-curve-modal.html
+++ b/source/dialogs/add-curve/add-curve-modal.html
@@ -51,7 +51,7 @@
                                 <ui-select search-enabled='false' ng-model='wiModal.unit'>
                                     <ui-select-match placeholder='Select a unit'>{{$select.selected.unit}}</ui-select-match>
                                     <ui-select-choices
-                                    repeat='spec in wiModal.selectedFamily.family_spec track by $index'>
+                                    repeat='spec.unit as spec in wiModal.selectedFamily.family_spec track by $index'>
                                         <div class="padding-left-20px">{{spec.unit}}</div>
                                     </ui-select-choices>
                                 </ui-select>
